drop more clang32 packages

--- a/mingw-w64-readline/PKGBUILD
+++ b/mingw-w64-readline/PKGBUILD
@@ -9,19 +9,18 @@ pkgver=${_basever}.${_patchlevel}
 pkgrel=1
 pkgdesc="MinGW port of readline for editing typed command lines (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
-depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs"
-         #"${MINGW_PACKAGE_PREFIX}-ncurses"
-         "${MINGW_PACKAGE_PREFIX}-termcap"
-        )
-makedepends=("${MINGW_PACKAGE_PREFIX}-cc" "${MINGW_PACKAGE_PREFIX}-autotools")
-options=('staticlibs' 'strip')
-license=('spdx:GPL-3.0-or-later')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://tiswww.case.edu/php/chet/readline/rltop.html"
 msys2_repository_url="https://git.savannah.gnu.org/cgit/readline.git"
 msys2_references=(
   "cpe: cpe:/a:gnu:readline"
 )
+license=('spdx:GPL-3.0-or-later')
+depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs"
+         #"${MINGW_PACKAGE_PREFIX}-ncurses"
+         "${MINGW_PACKAGE_PREFIX}-termcap"
+        )
+makedepends=("${MINGW_PACKAGE_PREFIX}-cc" "${MINGW_PACKAGE_PREFIX}-autotools")
 source=("https://ftp.gnu.org/gnu/${_realname}/${_realname}-${_basever}.tar.gz"{,.sig}
         # Patch adopted from https://hg.octave.org/mxe-octave/file/41e50d658de0/src/readline-1-sigwinch.patch
         "0001-sigwinch.patch"
@@ -97,10 +96,9 @@ prepare() {
 }
 
 build() {
-  [[ -d ${srcdir}/build-${MSYSTEM} ]] && rm -rf ${srcdir}/build-${MSYSTEM}
   mkdir -p ${srcdir}/build-${MSYSTEM} && cd ${srcdir}/build-${MSYSTEM}
-  export CFLAGS="$CFLAGS -DNEED_EXTERN_PC=1" # Use extern PC variable from libtermcap
 
+  export CFLAGS="$CFLAGS -DNEED_EXTERN_PC=1" # Use extern PC variable from libtermcap
   # XXX: make mingw-w64 provide a dummy alarm() function
   CFLAGS+=" -D__USE_MINGW_ALARM -D_POSIX"
 
@@ -111,6 +109,7 @@ build() {
     --build=${MINGW_CHOST} \
     --enable-shared \
     --without-curses
+
   make
 }
 
