--- a/mingw-w64-xxhash/PKGBUILD
+++ b/mingw-w64-xxhash/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=0.8.2
 pkgrel=2
 pkgdesc="Extremely fast non-cryptographic hash algorithm (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://xxhash.com/"
 license=('spdx:BSD-2-Clause' 'spdx:GPL-2.0-or-later')
 makedepends=("${MINGW_PACKAGE_PREFIX}-cmake"
