--- a/mingw-w64-gdb/PKGBUILD
+++ b/mingw-w64-gdb/PKGBUILD
@@ -9,7 +9,7 @@ pkgver=15.2
 pkgrel=2
 pkgdesc="GNU Debugger (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64')
 url="https://www.gnu.org/software/gdb/"
 msys2_references=(
   "cpe: cpe:/a:gnu:gdb"
