--- a/mingw-w64-mpfr/PKGBUILD
+++ b/mingw-w64-mpfr/PKGBUILD
@@ -13,7 +13,7 @@ msys2_references=(
   "cpe: cpe:2.3:a:mpfr:gnu_mpfr"
 )
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 license=('spdx:LGPL-3.0-or-later')
 depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs"
          "${MINGW_PACKAGE_PREFIX}-gmp")
