--- a/mingw-w64-termcap/PKGBUILD
+++ b/mingw-w64-termcap/PKGBUILD
@@ -7,12 +7,11 @@ pkgver=1.3.1
 pkgrel=7
 pkgdesc="Terminal feature database (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://www.gnu.org/software/termutils/"
 license=("GPL" "LGPL")
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc" "${MINGW_PACKAGE_PREFIX}-autotools")
 depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs")
-options=('staticlibs' 'strip')
 source=("https://ftp.gnu.org/gnu/termcap/${_realname}-${pkgver}.tar.gz"
         "0001-tparam-replace-write-with-fprintf.patch")
 sha256sums=('91a0e22e5387ca4467b5bcb18edf1c51b930262fd466d5fda396dd9d26719100'
