--- a/mingw-w64-cmake/PKGBUILD
+++ b/mingw-w64-cmake/PKGBUILD
@@ -15,7 +15,7 @@ _pkgver=${pkgver}${_rc}
 pkgrel=3
 pkgdesc="A cross-platform open-source make system"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://www.cmake.org/"
 msys2_repository_url="https://gitlab.kitware.com/cmake/cmake"
 msys2_references=(
