--- a/mingw-w64-libc++/PKGBUILD
+++ b/mingw-w64-libc++/PKGBUILD
@@ -14,7 +14,7 @@ _tag=llvmorg-${_version}${_rc}
 pkgver=${_version}${_rc/-/}
 pkgrel=1
 arch=(any)
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://libcxx.llvm.org/"
 msys2_references=(
   "cpe: cpe:/a:llvm:llvm"
