--- a/mingw-w64-libidn2/PKGBUILD
+++ b/mingw-w64-libidn2/PKGBUILD
@@ -9,7 +9,7 @@ pkgver=${_basever}${_subver}
 pkgrel=2
 pkgdesc="Implementation of the Stringprep, Punycode and IDNA specifications (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://www.gnu.org/software/libidn/#libidn2"
 msys2_repository_url="https://gitlab.com/libidn/libidn2"
 msys2_references=(
