--- a/mingw-w64-python-pyproject-hooks/PKGBUILD
+++ b/mingw-w64-python-pyproject-hooks/PKGBUILD
@@ -8,7 +8,7 @@ pkgver=1.1.0
 pkgrel=2
 pkgdesc="A low-level library for calling build-backends in pyproject.toml-based project (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 msys2_references=(
   'archlinux: python-pyproject-hooks'
   'pypi: pyproject_hooks'
