--- a/mingw-w64-autotools/PKGBUILD
+++ b/mingw-w64-autotools/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=2023.09.28
 pkgrel=2
 pkgdesc="A meta package for the GNU autotools build system (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 msys2_references=(
   'internal'
 )
