--- a/mingw-w64-cppdap/PKGBUILD
+++ b/mingw-w64-cppdap/PKGBUILD
@@ -11,7 +11,7 @@ _commit="37c744c294cbb24943a3913bbb67860d1609008c"
 pkgrel=1
 pkgdesc="C++ library for the Debug Adapter Protocol (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://github.com/google/cppdap'
 license=('spdx:Apache-2.0')
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
