--- a/mingw-w64-libarchive/PKGBUILD
+++ b/mingw-w64-libarchive/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=3.7.7
 pkgrel=1
 pkgdesc="Multi-format archive and compression library (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://www.libarchive.org/"
 msys2_repository_url='https://github.com/libarchive/libarchive/'
 msys2_references=(
