--- a/mingw-w64-libpsl/PKGBUILD
+++ b/mingw-w64-libpsl/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=0.21.5
 pkgrel=3
 pkgdesc="Public Suffix List library (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://rockdaboot.github.io/libpsl/"
 msys2_repository_url="https://github.com/rockdaboot/libpsl"
 msys2_references=(
