--- a/mingw-w64-libtool/PKGBUILD
+++ b/mingw-w64-libtool/PKGBUILD
@@ -8,7 +8,7 @@ pkgver=2.5.4
 pkgrel=1
 pkgdesc="A generic library support script (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://www.gnu.org/software/libtool"
 msys2_references=(
   "cpe: cpe:/a:gnu:libtool"
