--- a/mingw-w64-brotli/PKGBUILD
+++ b/mingw-w64-brotli/PKGBUILD
@@ -10,7 +10,7 @@ pkgver=1.1.0
 pkgrel=4
 pkgdesc="Brotli compression library (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://github.com/google/brotli'
 msys2_references=(
   "pypi: brotli"
