--- a/mingw-w64-ca-certificates/PKGBUILD
+++ b/mingw-w64-ca-certificates/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=20240203
 pkgrel=1
 pkgdesc='Common CA certificates (mingw-w64)'
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://www.mozilla.org/en-US/about/governance/policies/security-group/certs/'
 license=('MPL' 'GPL')
 install="ca-certificates-${MSYSTEM}.install"
