--- a/mingw-w64-cmake-bootstrap/PKGBUILD
+++ b/mingw-w64-cmake-bootstrap/PKGBUILD
@@ -8,7 +8,7 @@ pkgver=3.31.2
 pkgrel=1
 pkgdesc="A cross-platform open-source make system"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://www.cmake.org/"
 msys2_repository_url="https://gitlab.kitware.com/cmake/cmake"
 msys2_references=(
