--- a/mingw-w64-expat/PKGBUILD
+++ b/mingw-w64-expat/PKGBUILD
@@ -8,7 +8,7 @@ pkgver=2.6.4
 pkgrel=1
 pkgdesc="An XML parser library (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://libexpat.github.io/"
 msys2_repository_url="https://github.com/libexpat/libexpat"
 msys2_references=(
