--- a/mingw-w64-itstool/PKGBUILD
+++ b/mingw-w64-itstool/PKGBUILD
@@ -6,7 +6,7 @@ pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 pkgver=2.0.7
 pkgrel=1
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 pkgdesc="XML to PO and back again (mingw-w64)"
 url="https://itstool.org/"
 msys2_repository_url='https://github.com/itstool/itstool'
