--- a/mingw-w64-jsoncpp/PKGBUILD
+++ b/mingw-w64-jsoncpp/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=1.9.6
 pkgrel=3
 pkgdesc="A C++ library for interacting with JSON (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://github.com/open-source-parsers/jsoncpp"
 msys2_references=(
   "cpe: cpe:2.3:a:jsoncpp_project:jsoncpp"
