--- a/mingw-w64-libb2/PKGBUILD
+++ b/mingw-w64-libb2/PKGBUILD
@@ -8,7 +8,7 @@ pkgrel=2
 pkgdesc="C library providing BLAKE2b, BLAKE2s, BLAKE2bp, BLAKE2sp hash functions (mingw-w64)"
 arch=('any')
 url='https://blake2.net/'
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 license=('custom:CC0')
 depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs")
 makedepends=("${MINGW_PACKAGE_PREFIX}-autotools"
