--- a/mingw-w64-libtasn1/PKGBUILD
+++ b/mingw-w64-libtasn1/PKGBUILD
@@ -8,7 +8,7 @@ pkgver=4.19.0
 pkgrel=1
 pkgdesc="A library for Abstract Syntax Notation One (ASN.1) and Distinguish Encoding Rules (DER) manipulation (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://www.gnu.org/software/libtasn1/"
 msys2_references=(
   "cpe: cpe:/a:free_software_foundation_inc.:libtasn1"
