--- a/mingw-w64-libunistring/PKGBUILD
+++ b/mingw-w64-libunistring/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=1.2
 pkgrel=1
 pkgdesc="Library for manipulating Unicode strings and C strings. (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://www.gnu.org/software/libunistring"
 msys2_references=(
   "cpe: cpe:2.3:a:gnu:libunistring"
