--- a/mingw-w64-libuv/PKGBUILD
+++ b/mingw-w64-libuv/PKGBUILD
@@ -8,7 +8,7 @@ pkgver=1.49.2
 pkgrel=1
 pkgdesc="Cross-platform asynchronous I/O (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 msys2_references=(
   'archlinux: libuv'
   "cpe: cpe:/a:libuv:libuv"
