--- a/mingw-w64-libxslt/PKGBUILD
+++ b/mingw-w64-libxslt/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=1.1.42
 pkgrel=1
 pkgdesc="XML stylesheet transformation library (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://gitlab.gnome.org/GNOME/libxslt/-/wikis/home"
 msys2_references=(
   "cpe: cpe:/a:xmlsoft:libxslt"
