--- a/mingw-w64-lz4/PKGBUILD
+++ b/mingw-w64-lz4/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=1.10.0
 pkgrel=1
 pkgdesc="Very fast lossless compression algorithm (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://lz4.github.io/lz4/"
 msys2_references=(
   "cpe: cpe:/a:lz4_project:lz4"
