--- a/mingw-w64-make/PKGBUILD
+++ b/mingw-w64-make/PKGBUILD
@@ -15,7 +15,7 @@ pkgver=4.4.1
 pkgrel=3
 pkgdesc="GNU make utility to maintain groups of programs (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64' 'clang32')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://www.gnu.org/software/make"
 msys2_references=(
   "cpe: cpe:/a:gnu:make"
