--- a/mingw-w64-meson/PKGBUILD
+++ b/mingw-w64-meson/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=1.6.0
 pkgrel=3
 pkgdesc="High-productivity build system (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://mesonbuild.com/"
 msys2_repository_url="https://github.com/mesonbuild/meson"
 msys2_references=(
