--- a/mingw-w64-ntldd/PKGBUILD
+++ b/mingw-w64-ntldd/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=r19.7fb9365
 pkgrel=4
 pkgdesc="Tracks dependencides in Windows PE binaries (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 msys2_references=(
   'aur: mingw-w64-ntldd-git'
 )
