--- a/mingw-w64-p11-kit/PKGBUILD
+++ b/mingw-w64-p11-kit/PKGBUILD
@@ -9,7 +9,7 @@ pkgver=0.25.5
 pkgrel=1
 pkgdesc="Library to work with PKCS#11 modules (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://p11-glue.freedesktop.org/p11-kit.html"
 msys2_references=(
   "cpe: cpe:/a:p11-kit_project:p11-kit"
