--- a/mingw-w64-pkgconf/PKGBUILD
+++ b/mingw-w64-pkgconf/PKGBUILD
@@ -8,7 +8,7 @@ pkgver=2.3.0
 pkgrel=1
 pkgdesc='pkg-config compatible utility which does not depend on glib'
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://github.com/pkgconf/pkgconf'
 msys2_references=(
   "archlinux: pkgconf"
