--- a/mingw-w64-python-build/PKGBUILD
+++ b/mingw-w64-python-build/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=1.2.2
 pkgrel=2
 pkgdesc="A simple, correct Python build frontend (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 msys2_references=(
   'pypi: build'
 )
