--- a/mingw-w64-python-flit-core/PKGBUILD
+++ b/mingw-w64-python-flit-core/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=3.10.1
 pkgrel=2
 pkgdesc='Simplified packaging of Python modules (core backend) (mingw-w64)'
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 msys2_repository_url='https://github.com/pypa/flit/'
 url='https://flit.pypa.io/'
 license=('spdx:BSD-3-Clause')
