--- a/mingw-w64-python/PKGBUILD
+++ b/mingw-w64-python/PKGBUILD
@@ -26,7 +26,7 @@ pkgver=${_pybasever}.7
 pkgrel=3
 pkgdesc="A high-level scripting language (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 license=('spdx:PSF-2.0')
 url="https://www.python.org/"
 msys2_references=(
