--- a/mingw-w64-rhash/PKGBUILD
+++ b/mingw-w64-rhash/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=1.4.4
 pkgrel=3
 pkgdesc="Great utility for computing hash sums (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://sourceforge.net/projects/rhash/'
 msys2_references=(
   "cpe: cpe:2.3:a:rhash_project:rhash"
