--- a/mingw-w64-z3/PKGBUILD
+++ b/mingw-w64-z3/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=4.13.3
 pkgrel=3
 pkgdesc="Z3 is a high-performance theorem prover being developed at Microsoft Research (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://github.com/Z3Prover/z3"
 license=('spdx:MIT')
 depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs"
