--- a/mingw-w64-c-ares/PKGBUILD
+++ b/mingw-w64-c-ares/PKGBUILD
@@ -8,7 +8,7 @@ pkgver=1.34.4
 pkgrel=1
 pkgdesc="C library that performs DNS requests and name resolves asynchronously (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 msys2_references=(
   'archlinux: c-ares'
   "cpe: cpe:/a:c-ares_project:c-ares"
