--- a/mingw-w64-crt-git/PKGBUILD
+++ b/mingw-w64-crt-git/PKGBUILD
@@ -8,7 +8,7 @@ pkgrel=1
 _commit='a2d19218ddeff0ac61e8a38aada393c06c263b99'
 pkgdesc='MinGW-w64 CRT for Windows (mingw-w64)'
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://www.mingw-w64.org/'
 msys2_repository_url="https://sourceforge.net/p/mingw-w64/mingw-w64/ci/master/tree/mingw-w64-crt/"
 license=('spdx:ZPL-2.1')
