--- a/mingw-w64-headers-git/PKGBUILD
+++ b/mingw-w64-headers-git/PKGBUILD
@@ -8,7 +8,7 @@ pkgver=12.0.0.r446.ga2d19218d
 pkgrel=2
 _commit='a2d19218ddeff0ac61e8a38aada393c06c263b99'
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://www.mingw-w64.org/"
 msys2_repository_url="https://sourceforge.net/p/mingw-w64/mingw-w64/ci/master/tree/mingw-w64-headers/"
 license=('spdx:ZPL-2.1 AND LGPL-2.1-or-later')
@@ -43,7 +43,7 @@ build() {
   declare -a _extra_config
   if [[ ${MSYSTEM} == MINGW* ]]; then # MINGW32 & MINGW64
       _extra_config+=("--with-default-win32-winnt=0x601") # Windows 7
-  elif [[ ${MSYSTEM} != CLANGARM64 ]]; then # UCR64 & CLANG64 & CLANG32
+  elif [[ ${MSYSTEM} != CLANGARM64 ]]; then # UCR64 & CLANG64
       _extra_config+=("--with-default-win32-winnt=0x603") # Windows 8.1
   else # CLANGARM64
       _extra_config+=("--with-default-win32-winnt=0xA00") # Windows 10
