clean some PKGBUILDs

--- a/mingw-w64-libsoxr/PKGBUILD
+++ b/mingw-w64-libsoxr/PKGBUILD
@@ -16,8 +16,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-ninja"
              "git")
 depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs"
-          $([[ ${MINGW_PACKAGE_PREFIX} != *-clang-i686-* && ${MINGW_PACKAGE_PREFIX} != *-clang-x86_64-* ]] \
-            || echo "${MINGW_PACKAGE_PREFIX}-openmp"))
+         "${MINGW_PACKAGE_PREFIX}-omp")
 source=("git+https://git.code.sf.net/p/soxr/code#commit=945b592b70470e29f917f4de89b4281fbbd540c0"
         "0001-libsoxr-fix-pkgconfig-file.patch"
         "0002-libsoxr-fix-documentation-installation.patch"
