--- a/mingw-w64-luajit/PKGBUILD
+++ b/mingw-w64-luajit/PKGBUILD
@@ -57,7 +57,7 @@ build() {
   cd "${_realname}"
 
   XCFLAGS=-DLUAJIT_ENABLE_GC64
-  if [[ "$MSYSTEM" == "MINGW32" || "$MSYSTEM" == "CLANG32" ]]; then
+  if [[ "${CARCH}" == "i686" ]]; then
     # https://github.com/msys2/MINGW-packages/issues/17042
     XCFLAGS+=" -DLUAJIT_NO_UNWIND"
   fi
