--- a/mingw-w64-msmpi/PKGBUILD
+++ b/mingw-w64-msmpi/PKGBUILD
@@ -12,9 +12,7 @@ url="https://docs.microsoft.com/en-us/message-passing-interface/microsoft-mpi"
 license=('MIT')
 makedepends=("${MINGW_PACKAGE_PREFIX}-binutils" "${MINGW_PACKAGE_PREFIX}-cc")
 depends=("${MINGW_PACKAGE_PREFIX}-cc"
-         $([[ ${MINGW_PACKAGE_PREFIX} == *-clang-* && ${MSYSTEM} != CLANG64 ]] || \
-           echo "${MINGW_PACKAGE_PREFIX}-fc")
-         )
+         "${MINGW_PACKAGE_PREFIX}-fc")
 optdepends=("${MINGW_PACKAGE_PREFIX}-tcl: build & run test suite")
 options=('strip')
 source=(
@@ -61,10 +59,8 @@ build() {
   # Headers
   mkdir -p include
   cp $srcdir/mpi.h include
-  if [[ ${MINGW_PACKAGE_PREFIX} != *-clang-* || ${MSYSTEM} == CLANG64 ]]; then
-    cp $srcdir/{mpif.h,mpi.f90} include
-    cp $srcdir/mpifptr.h.${CARCH} include/mpifptr.h
-  fi
+  cp $srcdir/{mpif.h,mpi.f90} include
+  cp $srcdir/mpifptr.h.${CARCH} include/mpifptr.h
 
   # C/C++ Compiler wrappers
   mkdir -p bin
@@ -78,17 +74,13 @@ build() {
   cp bin/mpicxx.exe bin/mpic++.exe
 
   # Fortran Compiler wrappers
-  if [[ ${MINGW_PACKAGE_PREFIX} != *-clang-* || ${MSYSTEM} == CLANG64 ]]; then
-    $CC ${cflags} -o bin/mpifort.exe -DFC "${mpic}"
-    cp bin/mpifort.exe bin/mpif77.exe
-    cp bin/mpifort.exe bin/mpif90.exe
-  fi
+  $CC ${cflags} -o bin/mpifort.exe -DFC "${mpic}"
+  cp bin/mpifort.exe bin/mpif77.exe
+  cp bin/mpifort.exe bin/mpif90.exe
 
   # FORTRAN90 MPI modules
-  if [[ ${MINGW_PACKAGE_PREFIX} != *-clang-* || ${MSYSTEM} == CLANG64 ]]; then
-    bin/mpifort -c -Jinclude -cpp ${srcdir}/mpi.f90
-    rm mpi.o
-  fi
+  bin/mpifort -c -Jinclude -cpp ${srcdir}/mpi.f90
+  rm mpi.o
 }
 
 package() {
