--- a/mingw-w64-skia/PKGBUILD
+++ b/mingw-w64-skia/PKGBUILD
@@ -104,14 +104,12 @@ build() {
         BUILDTYPE="Debug"
     fi
 
-    case ${CARCH} in
-    i686)
-        _arch=x86
-        ;;
-    x86_64)
+    if [[ ${CARCH} == aarch64 ]]; then
+        _arch=arm64
+    else
         _arch=x64
-        ;;
-    esac
+    fi
+
     case ${BUILDTYPE} in
     Release)
         _is_official=true
@@ -121,20 +119,13 @@ build() {
         ;;
     esac
 
-    case ${MSYSTEM} in
-    CLANG64|CLANG32)
-        export CXX=clang++
-        export CC=clang
+    if [[ ${MINGW_PACKAGE_PREFIX} == *-clang-* ]]; then
         export LD=clang++
         export AR=llvm-ar
-    ;;
-    *)
-        export CXX=g++
-        export CC=gcc
+    else
         export LD=g++
         export AR=ar
-    ;;
-    esac
+    fi
 
     cd "${srcdir}"/skia
     ${MINGW_PREFIX}/bin/gn gen "${PWD}/out/${BUILDTYPE}-${MSYSTEM}" --args="
