--- a/mingw-w64-superlu/PKGBUILD
+++ b/mingw-w64-superlu/PKGBUILD
@@ -14,7 +14,7 @@ depends=("${MINGW_PACKAGE_PREFIX}-openblas")
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-ninja")
-            #$( [[ ${MSYSTEM} == CLANG32 ]] || echo "${MINGW_PACKAGE_PREFIX}-fc"))
+            #"${MINGW_PACKAGE_PREFIX}-fc")
 checkdepends=("${MINGW_PACKAGE_PREFIX}-tcl")
 source=("https://github.com/xiaoyeli/${_realname}/archive/v${pkgver}/${_realname}-${pkgver}.tar.gz"
         'all.tcl'
@@ -58,11 +58,7 @@ build() {
 
   mkdir -p "${srcdir}/build-${MSYSTEM}-shared" && cd "${srcdir}/build-${MSYSTEM}-shared"
 
-  # if [[ ${MSYSTEM} == CLANG32 ]]; then
-  #   _extra_config+=("-DXSDK_ENABLE_Fortran=OFF")
-  # else
-  #   _extra_config+=("-DXSDK_ENABLE_Fortran=ON")
-  # fi
+  # _extra_config+=("-DXSDK_ENABLE_Fortran=ON")
 
   MSYS2_ARG_CONV_EXCL='-DCMAKE_INSTALL_PREFIX=' \
     ${MINGW_PREFIX}/bin/cmake.exe \
