replace the workaround with proper solution

--- a/mingw-w64-vk-bootstrap/PKGBUILD
+++ b/mingw-w64-vk-bootstrap/PKGBUILD
@@ -17,7 +17,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-ninja")
 optdepends=()
-source=("https://codeload.github.com/charles-lunarg/${_realname}/tar.gz/refs/tags/v${pkgver}")
+source=("${_realname}"-${pkgver}.tar.gz"::https://codeload.github.com/charles-lunarg/${_realname}/tar.gz/refs/tags/v${pkgver}")
 sha256sums=('fbff2746134459648a488588a71609d11e6e00f591ac4a3cc6683a131bf31a53')
 
 build() {
@@ -32,9 +32,6 @@ build() {
           -B "build-${MSYSTEM}"
 
   cmake --build "build-${MSYSTEM}"
-
-  # remove the src archive
-  rm "../v${pkgver}"
 }
 
 package() {
