helics: Fix typo

--- a/mingw-w64-helics/PKGBUILD
+++ b/mingw-w64-helics/PKGBUILD
@@ -4,7 +4,7 @@ _realname=helics
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 pkgver=3.6.0
-pkgrel=2
+pkgrel=1
 pkgdesc="Hierarchical Engine for Large-scale Infrastructure Co-Simulation (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64')
@@ -19,7 +19,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
 options=('!strip')
 source=("https://github.com/GMLC-TDC/HELICS/releases/download/v${pkgver}/HELICS-v${pkgver}-source.tar.gz"
         "001-fix-build-with-fmt-11.patch")
-sha256sums=('e111ac5d92e808f27e330afd1f8b8ca4d86adf6ccd74e3280f2d40fb3e0e2ce9')
+sha256sums=('e111ac5d92e808f27e330afd1f8b8ca4d86adf6ccd74e3280f2d40fb3e0e2ce9'
             '6029c1a828540e4e7f0f9faa85a828b1fff42affbcd3830ad22ff47de1378f94')
 
 prepare() {
