--- a/mingw-w64-helics/PKGBUILD
+++ b/mingw-w64-helics/PKGBUILD
@@ -17,14 +17,8 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-ninja"
              "${MINGW_PACKAGE_PREFIX}-boost")
 options=('!strip')
-source=("https://github.com/GMLC-TDC/HELICS/releases/download/v${pkgver}/HELICS-v${pkgver}-source.tar.gz"
-        "001-fix-build-with-fmt-11.patch")
-sha256sums=('e111ac5d92e808f27e330afd1f8b8ca4d86adf6ccd74e3280f2d40fb3e0e2ce9'
-            '6029c1a828540e4e7f0f9faa85a828b1fff42affbcd3830ad22ff47de1378f94')
-
-prepare() {
-  patch -p1 -i "${srcdir}"/001-fix-build-with-fmt-11.patch
-}
+source=("https://github.com/GMLC-TDC/HELICS/releases/download/v${pkgver}/HELICS-v${pkgver}-source.tar.gz")
+sha256sums=('e111ac5d92e808f27e330afd1f8b8ca4d86adf6ccd74e3280f2d40fb3e0e2ce9')
 
 build() {
   declare -a extra_config
