kdiff3: update to 1.12.0

--- a/mingw-w64-kdiff3/PKGBUILD
+++ b/mingw-w64-kdiff3/PKGBUILD
@@ -4,7 +4,7 @@ source "$(dirname ${BASH_SOURCE[0]})"/../mingw-w64-PKGBUILD-common/kde-framework
 _realname=kdiff3
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-pkgver=1.11.5
+pkgver=1.12.0
 pkgrel=1
 arch=('any')
 mingw_arch=('ucrt64' 'clang64' 'clangarm64')
@@ -17,7 +17,8 @@ license=('GPL')
 pkgdesc="A file comparator/merge tool (mingw-w64)"
 groups=("${MINGW_PACKAGE_PREFIX}-kde-applications"
         "${MINGW_PACKAGE_PREFIX}-kdesdk")
-depends=("${MINGW_PACKAGE_PREFIX}-kconfig"
+depends=("${MINGW_PACKAGE_PREFIX}-icu"
+         "${MINGW_PACKAGE_PREFIX}-kconfig"
          "${MINGW_PACKAGE_PREFIX}-kcoreaddons"
          "${MINGW_PACKAGE_PREFIX}-kconfigwidgets"
          "${MINGW_PACKAGE_PREFIX}-kcrash"
@@ -25,7 +26,6 @@ depends=("${MINGW_PACKAGE_PREFIX}-kconfig"
          "${MINGW_PACKAGE_PREFIX}-kio"
          "${MINGW_PACKAGE_PREFIX}-kwidgetsaddons"
          "${MINGW_PACKAGE_PREFIX}-kxmlgui"
-         "${MINGW_PACKAGE_PREFIX}-qt6-5compat"
          "${MINGW_PACKAGE_PREFIX}-qt6-base")
 makedepends=("${MINGW_PACKAGE_PREFIX}-boost"
              "${MINGW_PACKAGE_PREFIX}-cc"
@@ -36,7 +36,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-boost"
              "${MINGW_PACKAGE_PREFIX}-kdoctools"
              "${MINGW_PACKAGE_PREFIX}-ninja")
 source=("https://download.kde.org/stable/${_realname}/${_realname}-${pkgver}.tar.xz"{,.sig})
-sha256sums=('420f18b3b9689698a05e102f8a41719049074da68f96c94be18d1b8297eeb545'
+sha256sums=('f93a065df8b2d70f22eb473c2dbfaad975c70341f37a918eb6ebb452771bacd6'
             'SKIP')
 validpgpkeys=(EE56D710885D36FB1E4D21F3F442B36D614B06BC) # Michael Reeves <reeves.87@gmail.com>
 
@@ -55,7 +55,6 @@ build() {
       -DCMAKE_INSTALL_PREFIX="${MINGW_PREFIX}" \
       "${_KDE_INSTALL_DIRS[@]}" \
       -DBUILD_TESTING=OFF \
-      -DBUILD_WITH_QT6=ON \
       "${_extra_config[@]}" \
       -S "${_realname}-${pkgver}" \
       -B "build-${MSYSTEM}"
