qt-creator: update to 15.0.0

--- a/mingw-w64-qt-creator/PKGBUILD
+++ b/mingw-w64-qt-creator/PKGBUILD
@@ -6,9 +6,9 @@ pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}"
          "${MINGW_PACKAGE_PREFIX}-${_realname}-docs"
          "${MINGW_PACKAGE_PREFIX}-${_realname}-devel")
-_base_ver=14.0.1
+_base_ver=15.0.0
 pkgver=${_base_ver/-/}
-pkgrel=3
+pkgrel=1
 pkgdesc='Lightweight, cross-platform integrated development environment (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -42,14 +42,12 @@ source=(https://download.qt.io/official_releases/qtcreator/${_base_ver%.*}/${_ba
         qt-creator-3.2.0-Allow-iOS-plugin-on-any-platform.patch
         qt-creator-5.0.1-fix-library-archive-path.patch
         003-link-against-clang-cpp.patch
-        004-support-llvm-19.patch::https://invent.kde.org/qt/qt-creator/qt-creator/-/commit/711c6d85.patch
-        005-fix-build-with-clang-19.patch)
-sha256sums=('9595d2e6c65bb918e78376314341dc2bef491c3200a5c6d5ce6f305509b0b28b'
-            'd53c00ab39d0fd16c03a1031fdb4e96f817ef120575866f4f03b307e521438bd'
+        004-fix-build-with-clang-19.patch::https://invent.kde.org/qt/qt-creator/qt-creator/-/commit/0e9943dd.patch)
+sha256sums=('23b1c6b478ca760997ecddd4c728f0da280b0696008a9bddd9a1068f16d48f72'
+            'eacd98f69324695595690c5328d62137af609e55c7c94c19e7bd8e1f7e4b4712'
             '29d67f88f071abe7a4b589182767b8a697fe4e516d70707bfca88f035883718f'
             '5d6c0b626ef29ce39372eb180527d64e11af2bf39a1a3e84e709464a20d2433b'
-            'c8ee06da9c9c181b5f11851b82b9bd3b28b7396c3cd7b3cef1e09aa800bd8c09'
-            '8cd86db9560698e86f8bac61294c8e6b5f23ad07ce4d3e87c266e1f731fff8aa')
+            'bd720dc514eb8d3994a3812c6159f11f46320d20cf2824e51084668e097b5f48')
 
 apply_patch_with_msg() {
   for _patch in "$@"
@@ -66,8 +64,7 @@ prepare() {
     qt-creator-3.2.0-Allow-iOS-plugin-on-any-platform.patch \
     qt-creator-5.0.1-fix-library-archive-path.patch \
     003-link-against-clang-cpp.patch \
-    004-support-llvm-19.patch \
-    005-fix-build-with-clang-19.patch
+    004-fix-build-with-clang-19.patch
 }
 
 build() {
@@ -78,10 +75,6 @@ build() {
     _extra_config+=("-DCMAKE_BUILD_TYPE=Release")
   else
     _extra_config+=("-DCMAKE_BUILD_TYPE=Debug")
-  fi
-
-  if [[ ${MINGW_PACKAGE_PREFIX} == *-clang-* ]]; then
-    _extra_config+=("-DWITH_QMLDESIGNER=OFF")
   fi
 
   CXXFLAGS+=" -Wno-deprecated-declarations" \
@@ -156,8 +149,8 @@ package_qt-creator-devel() {
 # PLUGINS="Debugger"
 # for PLUGIN in $PLUGINS; do
 #   PLUGINLC=$(echo ${PLUGIN} | tr 'A-Z' 'a-z')
-#   pushd src/build-x86_64-w64-mingw32/src/plugins/${PLUGINLC}
-#     PATH=/mingw64/bin:"$PATH" make || ALLGOOD="no"
+#   pushd src/build-${MSYSTEM}/src/plugins/${PLUGINLC}
+#     PATH=${MINGW_PREFIX}/bin:"$PATH" cmake --build . || ALLGOOD="no"
 #   popd
 # done
 # if [ "${ALLGOOD}" = "yes" ]; then
@@ -170,12 +163,12 @@ package_qt-creator-devel() {
 #   done
 #   for PLUGIN in $PLUGINS; do
 #     PLUGINLC=$(echo ${PLUGIN} | tr 'A-Z' 'a-z')
-#     pushd src/build-x86_64-w64-mingw32/src/plugins/${PLUGINLC}
-#       PATH=/mingw64/bin:$PATH make
-#       cp ../../../lib/qtcreator/plugins/${PLUGIN}d.dll /mingw64/lib/qtcreator/plugins/
+#     pushd src/build-${MSYSTEM}/src/plugins/${PLUGINLC}
+#       PATH=${MINGW_PREFIX}/bin:$PATH cmake --build .
+#       cp ../../../lib/qtcreator/plugins/${PLUGIN}d.dll ${MINGW_PREFIX}/lib/qtcreator/plugins/
 #     popd
 #   done
-#   PATH=/mingw64/bin:$PATH /mingw64/bin/qtcreator &
+#   PATH=${MINGW_PREFIX}/bin:$PATH ${MINGW_PREFIX}/bin/qtcreator &
 #   )
 # fi
 # 
