--- a/mingw-w64-json-glib/PKGBUILD
+++ b/mingw-w64-json-glib/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=json-glib
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=1.10.0
+pkgver=1.10.6
 pkgrel=1
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -15,11 +15,10 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-meson"
              "${MINGW_PACKAGE_PREFIX}-pkgconf"
              "${MINGW_PACKAGE_PREFIX}-gobject-introspection"
              "${MINGW_PACKAGE_PREFIX}-python-docutils")
-options=('strip' 'staticlibs')
 license=('spdx:LGPL-2.1-or-later')
-url="https://wiki.gnome.org/Projects/JsonGlib"
+url="https://gnome.pages.gitlab.gnome.org/json-glib/"
 source=("https://download.gnome.org/sources/${_realname}/${pkgver%.*}/${_realname}-${pkgver}.tar.xz")
-sha256sums=('1bca8d66d96106ecc147df3133b95a5bb784f1fa6f15d06dd7c1a8fb4a10af7b')
+sha256sums=('77f4bcbf9339528f166b8073458693f0a20b77b7059dbc2db61746a1928b0293')
 msys2_repository_url="https://gitlab.gnome.org/GNOME/json-glib"
 noextract=("${_realname}-${pkgver}.tar.xz")
 
@@ -29,10 +28,6 @@ prepare() {
 }
 
 build() {
-  [[ -d build-${MINGW_CHOST} ]] && rm -rf build-${MINGW_CHOST}
-  mkdir -p build-${MINGW_CHOST}
-  cd build-${MINGW_CHOST}
-
   MSYS2_ARG_CONV_EXCL="--prefix=" \
   meson setup \
     --prefix="${MINGW_PREFIX}" \
@@ -42,15 +37,18 @@ build() {
     -Dman=true \
     -Dinstalled_tests=false \
     -Ddocumentation=disabled \
-    ../${_realname}-${pkgver}
+    "build-${MSYSTEM}" \
+    "${_realname}-${pkgver}"
 
-  ninja
+  meson compile -C "build-${MSYSTEM}"
+}
+
+check() {
+  meson test -C "build-${MSYSTEM}" || warning "Tests failed"
 }
 
 package() {
-  cd "${srcdir}/build-${MINGW_CHOST}"
-
-  DESTDIR="${pkgdir}" ninja install
+  meson install -C "build-${MSYSTEM}" --destdir "${pkgdir}"
 
   install -Dm644 "${srcdir}/${_realname}-${pkgver}/COPYING" "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/COPYING"
 }
