--- a/mingw-w64-python-patsy/PKGBUILD
+++ b/mingw-w64-python-patsy/PKGBUILD
@@ -3,11 +3,8 @@
 _realname=patsy
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-provides=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-conflicts=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-replaces=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-pkgver=0.5.6
-pkgrel=3
+pkgver=1.0.1
+pkgrel=1
 pkgdesc="A Python package for describing statistical models and for building design matrices (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -17,23 +14,16 @@ msys2_references=(
 )
 license=('spdx:BSD-2-Clause')
 depends=("${MINGW_PACKAGE_PREFIX}-python"
-         "${MINGW_PACKAGE_PREFIX}-python-numpy"
-         "${MINGW_PACKAGE_PREFIX}-python-six")
+         "${MINGW_PACKAGE_PREFIX}-python-numpy")
 optdepends=("${MINGW_PACKAGE_PREFIX}-python-scipy: needed for spline-related functions")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-installer"
              "${MINGW_PACKAGE_PREFIX}-python-setuptools")
-source=("https://pypi.python.org/packages/source/p/patsy/${_realname}-${pkgver}.tar.gz")
-sha256sums=('95c6d47a7222535f84bff7f63d7303f2e297747a598db89cf5c67f0c0c7d2cdb')
-
-prepare() {
-  cd "${srcdir}"
-  rm -rf "python-build-${MSYSTEM}" | true
-  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}"
-}
+source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
+sha256sums=('e786a9391eec818c054e359b737bbce692f051aee4c661f4141cc88fb459c0c4')
 
 build() {
-  cd "${srcdir}/python-build-${MSYSTEM}"
+  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
   ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation
 }
 
