python-watchfiles: update to 1.0.3

--- a/mingw-w64-python-watchfiles/PKGBUILD
+++ b/mingw-w64-python-watchfiles/PKGBUILD
@@ -3,15 +3,16 @@
 _realname=watchfiles
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=0.24.0
-pkgrel=2
+pkgver=1.0.3
+pkgrel=1
 pkgdesc="Simple, modern and high performance file watching and code reload in python (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64')
-url='https://github.com/samuelcolvin/watchfiles'
 msys2_references=(
   'pypi: watchfiles'
 )
+msys2_repository_url='https://github.com/samuelcolvin/watchfiles'
+url='https://watchfiles.helpmanual.io/'
 license=('spdx:MIT')
 depends=(
   "${MINGW_PACKAGE_PREFIX}-python"
@@ -24,7 +25,7 @@ makedepends=(
 )
 options=('!strip')
 source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('afb72325b74fa7a428c009c1b8be4b4d7c2afedafb2982827ef2156646df2fe1')
+sha256sums=('f3ff7da165c99a5412fe5dd2304dd2dbaaaa5da718aad942dcb3a178eaa70c56')
 
 prepare() {
   cd "${srcdir}/${_realname}-${pkgver}"
