flang: fold double bessel functions on Windows

--- a/mingw-w64-flang/PKGBUILD
+++ b/mingw-w64-flang/PKGBUILD
@@ -9,7 +9,7 @@ _version=19.1.4
 _rc=""
 _tag=llvmorg-${_version}${_rc}
 pkgver=${_version}${_rc/-/}
-pkgrel=1
+pkgrel=2
 pkgdesc="Fortran frontend for LLVM (mingw-w64)"
 arch=('any')
 mingw_arch=('ucrt64' 'clang64' 'clangarm64')
@@ -34,10 +34,12 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-clang-tools-extra"
              $([[ "$_compiler" == "gcc" ]] && echo \
                "${MINGW_PACKAGE_PREFIX}-gcc")
              )
+optdepends=("${MINGW_PACKAGE_PREFIX}-llvm-openmp")
 _pkgfn=${_realname}-${pkgver}.src
 _url=https://github.com/llvm/llvm-project/releases/download/${_tag}
 source=("${_url}/${_pkgfn}.tar.xz"{,.sig}
         "${_url}/cmake-${pkgver}.src.tar.xz"{,.sig}
+        "0001-fold-double-bessel-functions-on-windows.patch"
         "0002-cmake-22162.patch"
         "0004-do-not-define-pid_t-on-mingw.patch"
         "0005-Fix-c_long_double-value-on-mingw-aarch64.patch"
@@ -48,6 +50,7 @@ sha256sums=('04186eadbf852d32ed5aa8bfa08af6c478445895a6ac8c0a4a734720e81eca97'
             'SKIP'
             'dd13ce8eba6ece85cad567f028b8e16d72f3e142cdcbbd693ac23a88b4013803'
             'SKIP'
+            'ae666c454909f6695bcd69f067b9c5abf8a6e82ce2930955b8598ab3b58a5204'
             '77fb0612217b6af7a122f586a9d0d334cd48bb201509bf72e8f8e6244616e895'
             '90bec8f2a9a8d62b57959722f3b15a54dfdaf24e0a5ea884bf6b1288d0853be8'
             'a1811227e2a26c2786b0c8577528580e679111f6c0889afea57d08333e2d5e4f'
@@ -72,12 +75,13 @@ prepare() {
   cd "${srcdir}/flang-${pkgver}.src"
 
   apply_patch_with_msg \
+    "0001-fold-double-bessel-functions-on-windows.patch" \
     "0002-cmake-22162.patch" \
     "0004-do-not-define-pid_t-on-mingw.patch" \
     "0005-Fix-c_long_double-value-on-mingw-aarch64.patch" \
     "0007-add-municode-flag-on-mingw.patch" \
     "0008-do-not-use-clock_gettime-on-mingw.patch"
-  # https://reviews.llvm.org/D143592
+  # https://github.com/llvm/llvm-project/commit/06eb10da
   apply_patch_with_msg \
     "0006-Rename-flang-new-flang-experimental-exec-to-flang.patch"
 }
