nghttp2: add explicit archlinux mapping

--- a/mingw-w64-nghttp2/PKGBUILD
+++ b/mingw-w64-nghttp2/PKGBUILD
@@ -11,6 +11,9 @@ mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
 url='https://nghttp2.org/'
 msys2_repository_url="https://github.com/nghttp2/nghttp2"
 msys2_references=(
+  "archlinux: libnghttp2"
+  "cygwin: nghttp2"
+  "gentoo: net-libs/nghttp2"
   "cpe: cpe:/a:nghttp2:nghttp2"
 )
 depends=()
