--- a/mingw-w64-winstorecompat-git/PKGBUILD
+++ b/mingw-w64-winstorecompat-git/PKGBUILD
@@ -3,9 +3,9 @@
 _realname=winstorecompat
 pkgbase=mingw-w64-${_realname}-git
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}-git"
-pkgver=12.0.0.r423.g8bcd5fc1a
+pkgver=12.0.0.r446.ga2d19218d
 pkgrel=1
-_commit='8bcd5fc1a72c0b6da3147bf21a4a494c81d14fae'
+_commit='a2d19218ddeff0ac61e8a38aada393c06c263b99'
 pkgdesc="MinGW-w64 winRT compat library (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -21,7 +21,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "git")
 options=('!buildflags' '!emptydirs')
 source=("mingw-w64"::"git+https://git.code.sf.net/p/mingw-w64/mingw-w64#commit=$_commit")
-sha256sums=('97ead29f8cf3c328a10f7b1eb1f5bcab533fce89c39216462fb64ffcf36fb511')
+sha256sums=('71f6d0e2522447456e77d7a631d8862ccf52024ffcc4c251818da4a0057e82fa')
 
 pkgver() {
   cd "${srcdir}/mingw-w64"
