--- a/mingw-w64-tree-sitter/PKGBUILD
+++ b/mingw-w64-tree-sitter/PKGBUILD
@@ -4,8 +4,8 @@ _realname=tree-sitter
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}"
          "${MINGW_PACKAGE_PREFIX}-lib${_realname}")
-pkgver=0.24.4
-pkgrel=2
+pkgver=0.24.5
+pkgrel=1
 pkgdesc="An incremental parsing system for programming tools (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -22,13 +22,17 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-ninja"
              "${MINGW_PACKAGE_PREFIX}-libwasmtime")
 checkdepends=('git')
-source=("https://github.com/tree-sitter/tree-sitter/archive/v${pkgver}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('d704832a6bfaac8b3cbca3b5d773cad613183ba8c04166638af2c6e5dfb9e2d2')
+source=("https://github.com/tree-sitter/tree-sitter/archive/v${pkgver}/${_realname}-${pkgver}.tar.gz"
+        "https://github.com/tree-sitter/tree-sitter/commit/178c5d93f4ca8c962dc977365148148edbce1f24.patch")
+sha256sums=('b5ac48acf5a04fd82ccd4246ad46354d9c434be26c9606233917549711e4252c'
+            '13296d59975d39b33a53d79caa1eee39b7bd18f5faf81aec1730a8ac84ef1010')
 noextract=("${_realname}-${pkgver}.tar.gz")
 
 prepare() {
   tar -xzf "${_realname}-${pkgver}.tar.gz" || true
   cd "${_realname}-${pkgver}"
+
+  patch -Np1 -i ../178c5d93f4ca8c962dc977365148148edbce1f24.patch
 
   cargo fetch --locked --target "$(rustc -vV | sed -n 's/host: //p')"
 }
@@ -42,7 +46,6 @@ build() {
   fi
 
   MSYS2_ARG_CONV_EXCL="-DCMAKE_INSTALL_PREFIX=" \
-  CFLAGS+=" -Wno-incompatible-pointer-types" \
     cmake \
       -GNinja \
       -DCMAKE_INSTALL_PREFIX="${MINGW_PREFIX}" \
