muparser: update to 2.3.5

--- a/mingw-w64-muparser/PKGBUILD
+++ b/mingw-w64-muparser/PKGBUILD
@@ -3,30 +3,23 @@
 _realname=muparser
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=2.3.4
+pkgver=2.3.5
 pkgrel=1
 pkgdesc="A fast math parser library (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://beltoforion.de/en/muparser/"
-license=('custom')
+msys2_repository_url="https://github.com/beltoforion/muparser"
+license=('spdx:BSD-2-Clause')
 depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs"
          "${MINGW_PACKAGE_PREFIX}-omp")
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-ninja")
-source=("${_realname}-${pkgver}.tar.gz"::https://github.com/beltoforion/muparser/archive/v${pkgver}.tar.gz
-        "001-exports.patch")
-sha256sums=('0c3fa54a3ebf36dda0ed3e7cd5451c964afbb15102bdbcba08aafb359a290121'
-            'f125ce80b250e59a6d650cfecc11f511703a7e5079409bc287f43b3fd56cdc37')
-
-prepare() {
-  cd ${srcdir}/${_realname}-${pkgver}
-  patch -p1 -i ${srcdir}/001-exports.patch
-}
+source=(https://github.com/beltoforion/muparser/archive/v${pkgver}/${_realname}-${pkgver}.tar.gz)
+sha256sums=('20b43cc68c655665db83711906f01b20c51909368973116dfc8d7b3c4ddb5dd4')
 
 build() {
-  [[ -d "${srcdir}/build-${MSYSTEM}" ]] && rm -rf "${srcdir}/build-${MSYSTEM}"
   mkdir -p "${srcdir}/build-${MSYSTEM}" && cd "${srcdir}/build-${MSYSTEM}"
 
   declare -a _extra_config
@@ -35,7 +28,6 @@ build() {
   else
     _extra_config+=("-DCMAKE_BUILD_TYPE=Debug")
   fi
-
 
   MSYS2_ARG_CONV_EXCL="-DCMAKE_INSTALL_PREFIX=" \
   ${MINGW_PREFIX}/bin/cmake.exe \
