--- a/mingw-w64-pyqt6/PKGBUILD
+++ b/mingw-w64-pyqt6/PKGBUILD
@@ -3,8 +3,7 @@
 _realname=pyqt6
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-_pkgver=6.8.0.dev2412041050
-pkgver=${_pkgver/.dev/dev}
+pkgver=6.8.0
 pkgrel=1
 pkgdesc="Python bindings for the Qt cross platform application toolkit (mingw-w64)"
 arch=('any')
@@ -21,7 +20,6 @@ depends=("${MINGW_PACKAGE_PREFIX}-python"
 optdepends=("${MINGW_PACKAGE_PREFIX}-qt6-activeqt"
             "${MINGW_PACKAGE_PREFIX}-qt6-connectivity"
             "${MINGW_PACKAGE_PREFIX}-qt6-declarative"
-            #"${MINGW_PACKAGE_PREFIX}-qt6-graphs"
             "${MINGW_PACKAGE_PREFIX}-qt6-multimedia"
             "${MINGW_PACKAGE_PREFIX}-qt6-pdf"
             "${MINGW_PACKAGE_PREFIX}-qt6-positioning"
@@ -42,7 +40,6 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-qt6-activeqt"
              "${MINGW_PACKAGE_PREFIX}-qt6-connectivity"
              "${MINGW_PACKAGE_PREFIX}-qt6-declarative"
-             #$([[ ${MSYSTEM} == MINGW64 ]] || echo "${MINGW_PACKAGE_PREFIX}-qt6-graphs")
              "${MINGW_PACKAGE_PREFIX}-qt6-multimedia"
              $([[ ${MSYSTEM} == MINGW64 || ${CARCH} == aarch64 ]] || echo "${MINGW_PACKAGE_PREFIX}-qt6-pdf")
              "${MINGW_PACKAGE_PREFIX}-qt6-positioning"
@@ -56,14 +53,13 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-qt6-tools"
              "${MINGW_PACKAGE_PREFIX}-qt6-webchannel"
              "${MINGW_PACKAGE_PREFIX}-qt6-websockets")
-#source=(https://pypi.python.org/packages/source/P/PyQt6/PyQt6-${pkgver}.tar.gz)
-source=(https://www.riverbankcomputing.com/pypi/packages/PyQt6/PyQt6-${_pkgver}.tar.gz)
-sha256sums=('47a3c75813ae9d59e4f7ded6350ab43fe5fad7bfe002bf9374d491ee748d4510')
+source=(https://pypi.python.org/packages/source/P/PyQt6/PyQt6-${pkgver}.tar.gz)
+sha256sums=('6d8628de4c2a050f0b74462e4c9cb97f839bf6ffabbca91711722ffb281570d9')
 
 prepare() {
   cd "${srcdir}"
   rm -rf python-build-${MSYSTEM} | true
-  cp -r PyQt6-${_pkgver} python-build-${MSYSTEM}
+  cp -r PyQt6-${pkgver} python-build-${MSYSTEM}
 }
 
 build() {
