boost: update to 1.87.0

--- a/mingw-w64-boost/PKGBUILD
+++ b/mingw-w64-boost/PKGBUILD
@@ -4,8 +4,8 @@ _realname=boost
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}"
          "${MINGW_PACKAGE_PREFIX}-${_realname}-libs")
-pkgver=1.86.0
-pkgrel=7
+pkgver=1.87.0
+pkgrel=1
 pkgdesc="Free peer-reviewed portable C++ source libraries"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -31,13 +31,13 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
 source=(https://github.com/boostorg/boost/releases/download/boost-${pkgver}/boost-${pkgver}-cmake.tar.xz
         0001-Fix-building-with-cmake-on-MINGW.patch
         0002-No-Arch-in-library-name-tag.patch
-        boost-1.63.0-python-test-PyImport_AppendInittab.patch
-        0011-support-numpy-2.patch)
-sha256sums=('2c5ec5edcdff47ff55e27ed9560b0a0b94b07bd07ed9928b476150e16b0efc57'
+        0003-fix-build-context-with-CMake-on-arm64.patch
+        boost-1.63.0-python-test-PyImport_AppendInittab.patch)
+sha256sums=('7da75f171837577a52bbf217e17f8ea576c7c246e4594d617bfde7fafd408be5'
             'abc6c78a252165df1de504d854d942eb486d88f06a6423d8b99dfec6ab138170'
             'ee45d199c0e578a8d670ee6c6fa46466a53a02690c94f9221c67bbc9ab3387dc'
-            'b22196b6415f5e1c0fe56b49a12ea7c20073b15a5f31907f363c7be38d70d628'
-            '61b1ad6c2ca16e9f99a4705a2526d2e9594f51e6e7df6f11d5f358b70e26dc01')
+            'ac6f996db2d5e2e5870b1a2d26c3b7d022f09d5be94945451d90875e8d4ecda4'
+            'b22196b6415f5e1c0fe56b49a12ea7c20073b15a5f31907f363c7be38d70d628')
 
 # Helper macros to help make tasks easier #
 apply_patch_with_msg() {
@@ -58,7 +58,7 @@ prepare() {
   apply_patch_with_msg \
     0001-Fix-building-with-cmake-on-MINGW.patch \
     0002-No-Arch-in-library-name-tag.patch \
-    0011-support-numpy-2.patch
+    0003-fix-build-context-with-CMake-on-arm64.patch
 }
 
 build() {
@@ -67,12 +67,6 @@ build() {
     _extra_config+=("-DCMAKE_BUILD_TYPE=Release")
   else
     _extra_config+=("-DCMAKE_BUILD_TYPE=Debug")
-  fi
-
-  if [[ "${CARCH}" == "aarch64" ]]; then
-    # boost context does not yet have an implementation for Windows ARM64
-    # coroutine and fiber depend on context
-    _extra_config+=("-DBOOST_EXCLUDE_LIBRARIES='context;cobalt;log;process;coroutine;fiber'")
   fi
 
   if [[ "${CARCH}" != "i686" ]]; then
@@ -86,7 +80,9 @@ build() {
       "${_extra_config[@]}" \
       -DBUILD_SHARED_LIBS="OFF" \
       -DBOOST_INSTALL_LAYOUT=tagged \
+      -DBOOST_STACKTRACE_ENABLE_FROM_EXCEPTION=OFF \
       -DPython_EXECUTABLE=${MINGW_PREFIX}/bin/python \
+      -DBUILD_TESTING=OFF \
       -S ${_realname}-${pkgver} \
       -B build-${MSYSTEM}-static
 
@@ -99,7 +95,9 @@ build() {
       "${_extra_config[@]}" \
       -DBUILD_SHARED_LIBS="ON" \
       -DBOOST_INSTALL_LAYOUT=tagged \
+      -DBOOST_STACKTRACE_ENABLE_FROM_EXCEPTION=OFF \
       -DPython_EXECUTABLE=${MINGW_PREFIX}/bin/python \
+      -DBUILD_TESTING=OFF \
       -S ${_realname}-${pkgver} \
       -B build-${MSYSTEM}
 
