octave: update to 9.3.0
`libtool` and `autoconf` have been patched to better support LLVM Flang
in the meantime. So, remove the workarounds that were needed earlier.

--- a/mingw-w64-octave/PKGBUILD
+++ b/mingw-w64-octave/PKGBUILD
@@ -3,8 +3,8 @@
 _realname=octave
 pkgbase=mingw-w64-${_realname}
 pkgname=${MINGW_PACKAGE_PREFIX}-${_realname}
-pkgver=9.2.0
-pkgrel=3
+pkgver=9.3.0
+pkgrel=1
 pkgdesc="GNU Octave: Interactive programming environment for numerical computations (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -65,7 +65,7 @@ source=(https://ftp.gnu.org/gnu/octave/octave-$pkgver.tar.xz{,.sig}
         "0002-mk-doc-cache-path.patch"
         "0003-no-community-support.patch")
 validpgpkeys=('DBD9C84E39FE1AAE99F04446B05F05B75D36644B')  # John W. Eaton
-sha256sums=('21417afb579105b035cac0bea09201522e384893ae90a781b8727efa32765807'
+sha256sums=('712468513db7e13b76f28c4b82cdba7d6f3f634c836ddb27a7a8fe9d708145f3'
             'SKIP'
             'aa5bd559d9774abc0f0c930a606762d1e452cc90278d16d8ae83561c0cae3bf8'
             'e53af21ad087e10a2906506589aab89ab8b43f4e3e4994b4c28e4d8ae83639ad')
@@ -97,11 +97,7 @@ build() {
 
   declare -a _extra_config
   if [[ ${MINGW_PACKAGE_PREFIX} == *-clang-* ]]; then
-    # Libtool still needs some hints how to handle LLVM Flang:
-    _extra_config+=("--enable-fortran-calling-convention=gfortran"
-                    "ac_cv_f77_compiler_gnu=yes"
-                    "lt_cv_prog_gnu_ld=yes"
-                    "F77=${MINGW_PREFIX}/bin/flang")
+    _extra_config+=("F77=${MINGW_PREFIX}/bin/flang")
     # The headers from some dependent libraries (graphicsmagick++?) cause a
     # torrent of warnings about deprecated declarations.  Sometimes to the
     # point that the build crashes with garbled characters in the terminal
