desktop-file-utils: update to 0.28
Rebase 002-install.patch, the logic was moved from install.py to meson.build.
https://gitlab.freedesktop.org/xdg/desktop-file-utils/-/commit/e0cc507f60f928e92d239d21ab7d03b5bc296f34

--- a/mingw-w64-desktop-file-utils/PKGBUILD
+++ b/mingw-w64-desktop-file-utils/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=desktop-file-utils
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=0.27
+pkgver=0.28
 pkgrel=1
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -15,13 +15,14 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-ninja")
 license=("spdx:GPL-2.0-or-later")
 url="https://www.freedesktop.org/wiki/Software/desktop-file-utils"
+msys2_repository_url='https://gitlab.freedesktop.org/xdg/desktop-file-utils'
 source=("https://www.freedesktop.org/software/${_realname}/releases/desktop-file-utils-${pkgver}.tar.xz"{,.asc}
         001-win.patch
         002-install.patch)
-sha256sums=('a0817df39ce385b6621880407c56f1f298168c040c2032cedf88d5b76affe836'
+sha256sums=('4401d4e231d842c2de8242395a74a395ca468cd96f5f610d822df33594898a70'
             'SKIP'
             '3858a459a788b9de64bd5a3cf4505d6b935085f33160ad7931029f1d58732cd1'
-            'd0fb777a741b3fbe1b92ae8b7855bbefb229e244c2c4a3af842f180e610f2fa1')
+            '63685214d41ee6ba567579e83a5c066cf490800b9f5a0b91f273b02ad00af8c8')
 validpgpkeys=('C01EDE5BB0D91E26D003662EC76BB9FEEAD12EA7') # Hans Petter Jansson <hpj@suse.com>
 
 prepare() {
@@ -49,6 +50,7 @@ package() {
   cd "$srcdir/build-${MSYSTEM}"
 
   DESTDIR="${pkgdir}" meson install
+  cp -v "${pkgdir}${MINGW_PREFIX}"/bin/{desktop-file-install.exe,desktop-file-edit.exe}
 
   install -Dm644 "${srcdir}/${_realname}-${pkgver}/COPYING" "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/COPYING"
 }
