--- a/mingw-w64-fltk/PKGBUILD
+++ b/mingw-w64-fltk/PKGBUILD
@@ -3,11 +3,12 @@
 _realname=fltk
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=1.4.0
+pkgver=1.4.1
 pkgrel=1
 pkgdesc="C++ user interface toolkit (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+msys2_repository_url='https://github.com/fltk/fltk'
 url="https://www.fltk.org/"
 license=('spdx:LGPL-2.0-or-later WITH FLTK-exception')
 depends=("${MINGW_PACKAGE_PREFIX}-expat"
@@ -23,7 +24,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-cc")
 source=("${_realname}-${pkgver}.tar.gz::https://github.com/${_realname}/${_realname}/archive/release-${pkgver}.tar.gz"
         "001-fltk-config-uuid-shared.patch")
-sha256sums=('192a48adaa2060da506ba9961485097203f3461b2262b4bd760a25c068ae4af0'
+sha256sums=('26d3e521cbf3498f122fa86f6e45fc33b84135f9eb2125f6366ef09e8eae8c91'
             '30ea78d49d15dcc6cb567ab08d0c13f0ddcb1844dc9b22ebcd3bd80dd88f640e')
 
 prepare() {
