mctc-lib: update to 0.3.2

--- a/mingw-w64-mctc-lib/PKGBUILD
+++ b/mingw-w64-mctc-lib/PKGBUILD
@@ -3,12 +3,13 @@
 _realname=mctc-lib
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-pkgver=0.3.1
+pkgver=0.3.2
 pkgrel=1
 pkgdesc="Modular computation tool chain library. (mingw-w64)"
 arch=('any')
 mingw_arch=('ucrt64')
-url='https://github.com/grimme-lab/mctc-lib'
+msys2_repository_url='https://github.com/grimme-lab/mctc-lib'
+url='https://grimme-lab.github.io/mctc-lib/'
 license=('spdx:Apache-2.0')
 depends=($([[ ${MINGW_PACKAGE_PREFIX} == *-clang-* ]] || echo "${MINGW_PACKAGE_PREFIX}-gcc-libgfortran"))
 makedepends=("${MINGW_PACKAGE_PREFIX}-fc"
@@ -16,7 +17,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-fc"
              "${MINGW_PACKAGE_PREFIX}-ninja")
 source=("https://github.com/grimme-lab/mctc-lib/archive/v${pkgver}/${_realname}-${pkgver}.tar.gz"
         "001-fix-install-dll.patch")
-sha256sums=('03dc8ccba37413da70e55a07cef8e8de53bce33f5bb52c1f8db5fec326abe083'
+sha256sums=('b18b06f80e6274b353dd091c12b3a83217033ce0bd80471b54cf486cc60c0251'
             '50152e93673b509748d2f23badb10013de146fcdc215cfff90b7a68979a6c13e')
 
 prepare() {
