mingw-w64-headers: revert recent commit due to regressions
See https://github.com/msys2/MINGW-packages/pull/22697#issuecomment-2541206219

There are upstream patches pending for fixing this, but just revert for now.

--- a/mingw-w64-headers-git/PKGBUILD
+++ b/mingw-w64-headers-git/PKGBUILD
@@ -5,7 +5,7 @@ pkgbase=mingw-w64-${_realname}-git
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}-git"
 pkgdesc="MinGW-w64 headers for Windows (mingw-w64)"
 pkgver=12.0.0.r446.ga2d19218d
-pkgrel=1
+pkgrel=2
 _commit='a2d19218ddeff0ac61e8a38aada393c06c263b99'
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
@@ -20,9 +20,11 @@ provides=("${MINGW_PACKAGE_PREFIX}-${_realname}")
 conflicts=("${MINGW_PACKAGE_PREFIX}-${_realname}")
 options=('!strip' '!emptydirs')
 source=("mingw-w64"::"git+https://git.code.sf.net/p/mingw-w64/mingw-w64#commit=$_commit"
-        0001-remove-ireference-boolean.patch)
+        0001-remove-ireference-boolean.patch
+        https://github.com/mingw-w64/mingw-w64/commit/581532b8e49a0e10cbdfe2332a8c1d61ff3d6820.patch)
 sha256sums=('71f6d0e2522447456e77d7a631d8862ccf52024ffcc4c251818da4a0057e82fa'
-            'cad48616325b5e70afa4e02424021fc8d54e17dcbf86eae3df990d3500080236')
+            'cad48616325b5e70afa4e02424021fc8d54e17dcbf86eae3df990d3500080236'
+            '743f04195bd6c4a742b1fe55fcba153f283d788f04f05effac26d3fab56553f4')
 
 pkgver() {
   cd "${srcdir}/mingw-w64"
@@ -32,6 +34,9 @@ pkgver() {
 prepare() {
   cd "${srcdir}/mingw-w64"
   git apply "${srcdir}/0001-remove-ireference-boolean.patch"
+
+  # https://github.com/msys2/MINGW-packages/pull/22697#issuecomment-2541206219
+  git apply -R "${srcdir}/581532b8e49a0e10cbdfe2332a8c1d61ff3d6820.patch"
 }
 
 build() {
